--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://HuyBui111.github.io/AIContentCreator",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
