--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.2.5",
@@ -25,7 +23,6 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.9.2",
-    "gh-pages": "^6.1.1"
+    "typescript": "^5.9.2"
   }
 }
